# dotfiles

./: .gitignore  70-synaptics.conf  README.md  conda_packages.txt  copy  copy.sh  copy_dotfiles  customize_xfce  duckduckgo.json  flatpak.yml  install  manjaro.yml  outfile  packages-i3.yml  packages.yml  post_install  rename-home-folders.sh  select_packages  tilix  xfce_panel_configuration.tar.bz2  yay.yml  yay_packages.yml
_packages/: manjaro.yml
_zsa-wally/: 50-zsa.rules
conda/: _environment.yml  environment.yml
dotfiles/: .Xmodmap  .alacritty.yml  .bashrc  .condarc  .gitconfig  .gitignore  .gtkrc-2.0  .inputrc  .p10k.zsh  .profile  .vimrc  .zshrc  environment.yml
dotfiles/.atom/: keymap.cson
dotfiles/.bash/: aliases.sh  colors.sh  functions.sh  path.sh  prompt.sh  variables.sh
dotfiles/.config/: mimeapps.list  okularpartrc  picom.conf
dotfiles/.diceware/: diceware-spanish.txt
dotfiles/.gimp-2.8/: Makefile  menurc  pluginrc  print-page-setup  tags.xml
dotfiles/.i3/: config  i3status.conf
dotfiles/.moc/: config
dotfiles/.zsh/: functions.zsh  prompt.zsh
dotfiles/templates/: pub-request-rg.md
etc/lightdm/: lightdm-gtk-greeter.conf
git/: .gitconfig  .gitignore
i3/.i3/: config
neovim/: .vimrc
nvim/: .markdownlint.jsonc
old_dotfiles/.atom/: keymap.cson
others/: README.md  duckduckgo.json  tilix
profile/: .profile
templates/Templates/: letter.tex
templates/Templates/python/: pyproject.toml
tmux/: .tmux.conf
userdirs/: user-dirs.dirs  userdirs_update.py
vim/: .vimrc
zsh/: .spaceshiprc.zsh  .zshrc
zsh/.config/: starship.toml
(+218 files in other folders)
