[project]
name = "PROJECTNAME"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm[toml]>=8.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "no-local-version"
write_to =  "src/PROJECT/_version.py"
